--- a/control-motor/MDK-ARM/control-motor/control-motor.build_log.htm
+++ b/control-motor/MDK-ARM/control-motor/control-motor.build_log.htm
@@ -27,8 +27,10 @@ Project File Date:  05/18/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'F:\keil 5\ARM\ARMCC\Bin'
 Build target 'control-motor'
+compiling main.c...
+compiling openmv.c...
 linking...
-Program Size: Code=6684 RO-data=312 RW-data=16 ZI-data=1776  
+Program Size: Code=7788 RO-data=1832 RW-data=24 ZI-data=1808  
 FromELF: creating hex file...
 "control-motor\control-motor.axf" - 0 Error(s), 0 Warning(s).
 
@@ -53,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
