增加了日志文件记录

--- a/control-motor/MDK-ARM/control-motor/control-motor.build_log.htm
+++ b/control-motor/MDK-ARM/control-motor/control-motor.build_log.htm
@@ -21,15 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-F:\repositories\Myrobot\control-motor\MDK-ARM\control-motor.uvprojx
+f:\repositories\Myrobot\control-motor\MDK-ARM\control-motor.uvprojx
 Project File Date:  05/18/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'F:\keil 5\ARM\ARMCC\Bin'
 Build target 'control-motor'
 compiling main.c...
+compiling openmv.c...
 linking...
-Program Size: Code=7496 RO-data=1832 RW-data=28 ZI-data=1788  
+Program Size: Code=7520 RO-data=1832 RW-data=28 ZI-data=1796  
 FromELF: creating hex file...
 "control-motor\control-motor.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
