--- a/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
+++ b/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
@@ -27,14 +27,12 @@ Project File Date:  05/22/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'F:\keil 5\ARM\ARMCC\Bin'
 Build target '2023E'
+compiling find_trace_GRAY.c...
 compiling main.c...
-../Core/Src/main.c(212): warning:  #177-D: variable "Moto_R"  was declared but never referenced
-      static int Moto_L = 0 , Moto_R = 0; 
-../Core/Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=11246 RO-data=1898 RW-data=144 ZI-data=2144  
+Program Size: Code=11890 RO-data=1898 RW-data=164 ZI-data=2148  
 FromELF: creating hex file...
-"2023E\2023E.axf" - 0 Error(s), 1 Warning(s).
+"2023E\2023E.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +55,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
