--- a/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
+++ b/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
@@ -22,15 +22,14 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 F:\repositories\Myrobot\two_select_stm32f103zet6\MDK-ARM\2023E.uvprojx
-Project File Date:  05/22/2024
+Project File Date:  05/26/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'F:\keil 5\ARM\ARMCC\Bin'
 Build target '2023E'
-compiling find_trace_GRAY.c...
-compiling main.c...
+compiling MPU6050.c...
 linking...
-Program Size: Code=11890 RO-data=1898 RW-data=164 ZI-data=2148  
+Program Size: Code=12514 RO-data=1898 RW-data=84 ZI-data=2148  
 FromELF: creating hex file...
 "2023E\2023E.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
