--- a/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
+++ b/two_select_stm32f103zet6/MDK-ARM/2023E/2023E.build_log.htm
@@ -16,9 +16,9 @@ Linker/Locator:  ArmLink.exe V5.06 update 5 (build 528)
 Library Manager: ArmAr.exe V5.06 update 5 (build 528)
 Hex Converter:   FromElf.exe V5.06 update 5 (build 528)
 CPU DLL:         SARMCM3.DLL V5.24.1
-Dialog DLL:      DCM.DLL V1.16.0.0
+Dialog DLL:      DARMSTM.DLL V1.68.0.0
 Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
-Dialog DLL:      TCM.DLL V1.32.0.0
+Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 F:\repositories\Myrobot\two_select_stm32f103zet6\MDK-ARM\2023E.uvprojx
@@ -27,9 +27,9 @@ Project File Date:  05/26/2024
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'F:\keil 5\ARM\ARMCC\Bin'
 Build target '2023E'
-compiling MPU6050.c...
+compiling main.c...
 linking...
-Program Size: Code=12514 RO-data=1898 RW-data=84 ZI-data=2148  
+Program Size: Code=16658 RO-data=2210 RW-data=176 ZI-data=4560  
 FromELF: creating hex file...
 "2023E\2023E.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
